<resources>
	<string name="app_name">APK-IDE</string>
    <string name="request_permission_label">Permissions</string>
    <string name="request_permission_message">: Need to get permission to access files and media.</string>
    <string name="ui_label_settings">Settings</string>
    <string name="ui_label_about">About</string>
    <string name="browser_label_file">Files</string>
    <string name="browser_label_project">Project</string>
    <string name="browser_label_search">Search Results</string>
    <string name="browser_label_error">No Errors</string>
    <string name="browser_label_build">Build Output</string>
    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>
    <string name="action_run">Run</string>
    <string name="action_edit_mode">Toggle Edit Mode</string>
    <string name="action_navigate_mode">Toggle Navigate Mode</string>
    <string name="action_group_edit">Edit</string>
    <string name="action_find">Find</string>
    <string name="action_find_in_file">Find In File</string>
    <string name="action_find_replace">Find Replace</string>
    <string name="action_find_replace_in_file">Find Replace In File</string>
    <string name="action_find_usages">Find Usages</string>
    <string name="action_group_view">View</string>
    <string name="action_view_file">Files</string>
    <string name="action_view_project">Project</string>
    <string name="action_view_error">Errors</string>
    <string name="action_view_search">Search</string>
    <string name="action_view_build">Build</string>
    <string name="action_group_navigate">Navigate</string>
    <string name="action_backward">Backward</string>
    <string name="action_forward">Forward</string>
    <string name="action_goto">Goto</string>
    <string name="action_goto_definition">Goto Definition</string>
    <string name="action_group_code">Code</string>
    <string name="action_optimize_imports">Optimize Imports</string>
    <string name="action_reformat_code">Reformat Code</string>
    <string name="action_auto_indent_lines">Auto-Indent Lines…</string>
    <string name="action_generate">Generate…</string>
    <string name="action_surround_with">Surround With…</string>
    <string name="action_comment_with_line_comment">Comment With Line Comment</string>
    <string name="action_comment_with_block_comment">Comment With Block Comment</string>
    <string name="action_uncomment">Un-Out Comment</string>
    <string name="action_group_refactor">Refactor</string>
    <string name="action_rename">Rename</string>
    <string name="action_inline">Inline</string>
    <string name="action_safe_delete">Safe Delete</string>
    <string name="action_group_project">Project</string>
    <string name="action_make_project">Make Project</string>
    <string name="action_clean_project">Clean Project</string>
    <string name="action_rebuild_project">Rebuild Project</string>
    <string name="action_close_project">Close Project</string>
    <string name="action_close_file">Close File</string>
    <string name="action_save_all">Save All</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_pick_color">Color…</string>
    <string name="action_cut">Cut</string>
    <string name="action_copy">Copy</string>
    <string name="action_paste">Paste</string>
    <string name="action_select_all">Select All</string>
    <string name="non_open_file">No Files Are Open…</string>
    <string name="browser_file_project_properties">Project Properties</string>
</resources>