<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_undo"
        app:showAsAction="always"
        android:title="@string/action_undo"
        android:id="@+id/commandUndo" />

    <item
        android:icon="@drawable/ic_redo"
        app:showAsAction="always"
        android:title="@string/action_redo"
        android:id="@+id/commandRedo" />

    <item
        android:icon="@drawable/ic_run"
        app:showAsAction="always"
        android:id="@+id/commandRun"
        android:title="@string/action_run" />

    <item
        android:icon="@drawable/ic_view"
        app:showAsAction="always"
        android:id="@+id/commandEditMode"
        android:title="@string/action_edit_mode" />

    <item
        android:icon="@drawable/ic_edit"
        app:showAsAction="always"
        android:id="@+id/commandNavigateMode"
        android:title="@string/action_navigate_mode" />

    <item
        android:id="@+id/commandEdit"
        android:title="@string/action_group_edit">
        <menu>
            <item
                android:id="@+id/commandFind"
                android:title="@string/action_find" />
            <item
                android:id="@+id/commandFindInFile"
                android:title="@string/action_find_in_file" />
            <item
                android:id="@+id/commandFindReplace"
                android:title="@string/action_find_replace" />
            <item
                android:id="@+id/commandFindReplaceInFile"
                android:title="@string/action_find_replace_in_file" />
            <item
                android:id="@+id/commandFindUsages"
                android:title="@string/action_find_usages" />
        </menu>
    </item>

    <item android:title="@string/action_group_view">
        <menu>
            <item
                android:id="@+id/commandViewFile"
                android:title="@string/action_view_file" />
            <item
                android:id="@+id/commandViewProject"
                android:title="@string/action_view_project"/>
            <item
                android:id="@+id/commandViewError"
                android:title="@string/action_view_error" />
            <item
                android:id="@+id/commandViewSearch"
                android:title="@string/action_view_search" />
            <item
                android:id="@+id/commandViewBuild"
                android:title="@string/action_view_build" />
        </menu>
    </item>

    <item
        android:id="@+id/commandNavigate"
        android:title="@string/action_group_navigate">
        <menu>
            <item
                android:id="@+id/commandBackward"
                android:title="@string/action_backward" />
            <item
                android:id="@+id/commandForward"
                android:title="@string/action_forward" />
            <item
                android:id="@+id/commandGoto"
                android:title="@string/action_goto" />
            <item
                android:id="@+id/commandGotoDefinition"
                android:title="@string/action_goto_definition" />
        </menu>
    </item>

    <item
        android:id="@+id/commandCode"
        android:title="@string/action_group_code">
        <menu>
            <item
                android:id="@+id/commandOptimizeImports"
                android:title="@string/action_optimize_imports" />
            <item
                android:id="@+id/commandReformatCode"
                android:title="@string/action_reformat_code" />
            <item
                android:id="@+id/commandAutoIndentLines"
                android:title="@string/action_auto_indent_lines" />
            <item
                android:id="@+id/commandGenerate"
                android:title="@string/action_generate" />
            <item
                android:id="@+id/commandSurroundWith"
                android:title="@string/action_surround_with" />
            <item
                android:id="@+id/commandOutLineComment"
                android:title="@string/action_comment_with_line_comment" />
            <item
                android:id="@+id/commandOutBlockComment"
                android:title="@string/action_comment_with_block_comment" />
            <item
                android:id="@+id/commandUnOutComment"
                android:title="@string/action_uncomment"/>
        </menu>
    </item>

    <item
        android:title="@string/action_group_refactor"
        android:id="@+id/commandRefactor">
        <menu>
            <item
                android:title="@string/action_rename"
                android:id="@+id/commandRename" />
            <item
                android:title="@string/action_inline"
                android:id="@+id/commandInline" />
            <item
                android:title="@string/action_safe_delete"
                android:id="@+id/commandSafeDelete" />
        </menu>
    </item>

    <item
        android:id="@+id/commandBuild"
        android:title="@string/action_group_project">
        <menu>
            <item
                android:id="@+id/commandMakeProject"
                android:title="@string/action_make_project" />
            <item
                android:id="@+id/commandCleanProject"
                android:title="@string/action_clean_project" />
            <item
                android:id="@+id/commandRebuildProject"
                android:title="@string/action_rebuild_project" />
            <item
                android:id="@+id/commandCloseProject"
                android:title="@string/action_close_project" />
        </menu>
    </item>
    <item
        android:id="@+id/commandCloseFile"
        android:title="@string/action_close_file" />

    <item
        android:id="@+id/commandSaveAll"
        android:title="@string/action_save_all" />

    <item
        android:id="@+id/commandGotoSettings"
        android:title="@string/action_settings" />

    <item
        android:id="@+id/commandExit"
        android:title="@string/action_exit" />

</menu>