<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:icon="@drawable/ic_manage"
        app:showAsAction="always"
        android:id="@+id/commandPickColor"
        android:title="@string/action_pick_color" />
    <item
        android:icon="@drawable/ic_copy"
        app:showAsAction="always"
        android:id="@+id/commandCut"
        android:title="@string/action_cut" />
    <item
        android:icon="@drawable/ic_copy"
        app:showAsAction="always"
        android:id="@+id/commandCopy"
        android:title="@string/action_copy" />
    <item
        android:icon="@drawable/ic_paste"
        app:showAsAction="always"
        android:id="@+id/commandPaste"
        android:title="@string/action_paste" />

    <item
        android:icon="@drawable/ic_expand"
        app:showAsAction="always"
        android:title="@string/action_select_all"
        android:id="@+id/commandSelectAll" />

    <item
        android:id="@+id/commandEdit"
        android:title="@string/action_group_edit">
        <menu>
            <item
                android:id="@+id/commandFind"
                android:title="@string/action_find" />
            <item
                android:id="@+id/commandFindInFile"
                android:title="@string/action_find_in_file" />
            <item
                android:id="@+id/commandFindReplace"
                android:title="@string/action_find_replace" />
            <item
                android:id="@+id/commandFindReplaceInFile"
                android:title="@string/action_find_replace_in_file" />
            <item
                android:id="@+id/commandFindUsages"
                android:title="@string/action_find_usages" />
        </menu>
    </item>

    <item
        android:id="@+id/commandNavigate"
        android:title="@string/action_group_navigate">
        <menu>
            <item
                android:id="@+id/commandGoto"
                android:title="@string/action_goto" />
            <item
                android:id="@+id/commandGotoDefinition"
                android:title="@string/action_goto_definition" />
        </menu>
    </item>

    <item
        android:id="@+id/commandCode"
        android:title="@string/action_group_code">
        <menu>
            <item
                android:id="@+id/commandOptimizeImports"
                android:title="@string/action_optimize_imports" />
            <item
                android:id="@+id/commandReformatCode"
                android:title="@string/action_reformat_code" />
            <item
                android:id="@+id/commandAutoIndentLines"
                android:title="@string/action_auto_indent_lines" />
            <item
                android:id="@+id/commandGenerate"
                android:title="@string/action_generate" />
            <item
                android:id="@+id/commandSurroundWith"
                android:title="@string/action_surround_with" />
            <item
                android:id="@+id/commandOutLineComment"
                android:title="@string/action_comment_with_line_comment" />
            <item
                android:id="@+id/commandOutBlockComment"
                android:title="@string/action_comment_with_block_comment" />

            <item
                android:id="@+id/commandUnOutComment"
                android:title="@string/action_uncomment"/>
        </menu>
    </item>

    <item
        android:title="@string/action_group_refactor"
        android:id="@+id/commandRefactor">
        <menu>
            <item
                android:title="@string/action_rename"
                android:id="@+id/commandRename" />
            <item
                android:title="@string/action_inline"
                android:id="@+id/commandInline" />
            <item
                android:title="@string/action_safe_delete"
                android:id="@+id/commandSafeDelete" />
        </menu>
    </item>

    <item
        android:id="@+id/commandCloseFile"
        android:title="@string/action_close_file" />

    <item
        android:id="@+id/commandSaveAll"
        android:title="@string/action_save_all" />
</menu>